--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Robbe Bryssinck
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: My work on cyber security and software engineering!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/11165451?s=460&u=823a78b38cb32dc62671665678e259b512bcabcc&v=4
 
 #
 # Flags below are optional
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: robbebryssinck@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: RobbeBryssinck
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
